--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,117 +1,10 @@
-<div style="text-align:center">
-    <h1>
-        Facture
-    </h1>
-</div>
+<ul class="nav">
+    <li class="nav-item">
+        <a class="nav-link " routerLink="/facture">Exemple Facture</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" routerLink="/libre">Text Libre</a>
+    </li>
+</ul>
 
-<div class="container" style="margin-top:40px;">
-    <div class="row clearfix">
-    </div>
-    <div class="row clearfix">
-        <form>
-            <div class="form-group row">
-                <label for="inputEmail3" class="col-sm-4 col-form-label">Numéro de la facture</label>
-                <div class="col-sm-8">
-                    <input type="number" class="form-control" [(ngModel)]="number" name="{{number}}">
-                </div>
-            </div>
-            <div class="form-group row">
-                <label for="inputPassword3" class="col-sm-4 col-form-label">Destinataire</label>
-                <div class="col-sm-8">
-                    <input type="text" class="form-control" [(ngModel)]="to" name="{{to}}">
-                </div>
-            </div>
-        </form>
-        <div class="col-md-12" style="margin-top:20px;">
-            <table class="table table-striped table-bordered">
-                <thead>
-                    <tr>
-                        <th>Description</th>
-                        <th>Quantity</th>
-                        <th>unitPrice</th>
-                        <th>Tax (%) </th>
-                        <th>totalPrice</th>
-                        <th>Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let field of fieldArray; let i = index">
-                        <td>
-                            <input [(ngModel)]="field.description" class="form-control" type="text" name="{{field.description}}" />
-                        </td>
-                        <td>
-                            <input [(ngModel)]="field.quantity" class="form-control" type="number" step="0" min="0" name="{{field.quantity}}" />
-                        </td>
-                        <td>
-                            <input [(ngModel)]="field.unitPrice" class="form-control" type="number" step="0" min="0" name="{{field.unitPrice}}" />
-                        </td>
-                        <td>
-                            <input [(ngModel)]="field.tax" class="form-control" type="number" step="0" min="0" name="{{field.tax}}" />
-                        </td>
-                        <td>
-                            <input [(ngModel)]="field.totalPrice" class="form-control" type="number" step="0" min="0" readonly name="{{field.totalPrice}}" />
-                        </td>
-                        <td>
-                            <button class="btn btn-default" type="button" (click)="deleteFieldValue(i)">Delete</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input class="form-control" type="text" id="newAttributedescription" [(ngModel)]="newAttribute.description" name="newAttributedescription" />
-                        </td>
-                        <td>
-                            <input class="form-control" type="number" step="0" min="0" id="newAttributeQuantity" [(ngModel)]="newAttribute.quantity" name="newAttributeQuantity" />
-                        </td>
-                        <td>
-                            <input class="form-control" type="number" step="0" min="0" id="newAttributeunitPrice" [(ngModel)]="newAttribute.unitPrice" name="newAttributeunitPrice" />
-                        </td>
-                        <td>
-                            <input class="form-control" type="number" step="0" min="0" id="newAttributeTax" [(ngModel)]="newAttribute.tax" name="newAttributeTax" />
-                        </td>
-                        <td>
-                            <input class="form-control" type="number" readonly id="newAttributetotalPrice" [(ngModel)]="newAttribute.totalPrice" name="newAttributetotalPrice" />
-                        </td>
-                        <td>
-                            <button class="btn btn-default" type="button" (click)="addFieldValue()">Add</button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-    <div class="row clearfix">
-        <div class="col-md-12">
-            <button id='res' class="pull-right btn btn-default" (click)="calculerResultat()">Calculer Résultat</button>
-
-        </div>
-    </div>
-    <div class="row clearfix" style="margin-top:20px;" *ngIf="visible">
-        <div class="col align-self-end">
-            <table class="table table-bordered table-hover" id="tab_logic_total">
-                <tbody>
-                    <tr>
-                        <th class="text-center">Sub Total</th>
-                        <td class="text-center">{{subTotal}}</td>
-                    </tr>
-                    <tr>
-                        <th class="text-center">Tax Amount</th>
-                        <td class="text-center">{{taxAmount}}</td>
-                    </tr>
-                    <tr>
-                        <th class="text-center">Grand Total</th>
-                        <td class="text-center">{{total}}</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
-
-
-<div class="container" *ngIf="visible">
-    <div class="col-md-4 col-md-offset-5">
-        <ngx-qrcode [qrc-element-type]="elementType" [qrc-value]="value">
-        </ngx-qrcode>
-    </div>
-
-</div>
+<router-outlet></router-outlet>
