some UI changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,10 @@
         <a class="nav-link" routerLink="/libre">Text Libre</a>
     </li>
 </ul>
+<div class="jumbotron">
+    <h1 class="display-4">TP ASI QRCode</h1>
+    <hr class="my-4">
+    <p class="lead">Une utilisation basique du QRCode: Génération et lecture dans la cas général et l'exemple d'un facture.</p>
+</div>
 
 <router-outlet></router-outlet>
