--- a/src/app/facture/facture.component.html
+++ b/src/app/facture/facture.component.html
@@ -12,7 +12,7 @@
             <div class="form-group row">
                 <label for="inputEmail3" class="col-sm-4 col-form-label">Numéro de la facture</label>
                 <div class="col-sm-8">
-                    <input type="number" class="form-control" [(ngModel)]="number" name="{{number}}">
+                    <input type="number" class="form-control" [(ngModel)]="numero" name="{{numero}}">
                 </div>
             </div>
             <div class="form-group row">
