--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
-<ul class="nav">
-    <li class="nav-item">
-        <a class="nav-link " routerLink="/facture">Exemple Facture</a>
+<ul class=" doNotPrint nav">
+    <li class=" nav-item">
+        <a class=" nav-link " routerLink="/facture">Exemple Facture</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" routerLink="/libre">Text Libre</a>
     </li>
 </ul>
-<div class="jumbotron">
-    <h1 class="display-4">TP ASI QRCode</h1>
-    <hr class="my-4">
+<div class="doNotPrint jumbotron">
+    <h1 class="=display-4">TP ASI QRCode</h1>
+    <hr class=" my-4">
     <p class="lead">Une utilisation basique du QRCode: Génération et lecture dans la cas général et l'exemple d'un facture.</p>
 </div>
 
