--- a/src/app/text-libre/text-libre.component.html
+++ b/src/app/text-libre/text-libre.component.html
@@ -1,3 +1,8 @@
+<div style="text-align:center">
+    <h1>
+        Text Libre
+    </h1>
+</div>
 <div class="container" style="margin-top:40px;">
     <div class="row clearfix">
         <div class="col-md-12">
@@ -15,9 +20,10 @@
             </form>
         </div>
     </div>
-    <div class="row clearfix">
+    <div class="doNotPrint row clearfix">
         <div class="col-md-12">
             <button id='res' class="pull-right btn btn-default" (click)="calculerResultat()">Calculer Résultat</button>
+            <button id='res' class="pull-right btn btn-default" (click)="printPage()">Imprimer</button>
 
         </div>
     </div>
