--- a/src/app/facture/facture.component.html
+++ b/src/app/facture/facture.component.html
@@ -4,10 +4,10 @@
     </h1>
 </div>
 
-<div class="container" style="margin-top:40px;">
+<div class="container " style="margin-top:40px;">
     <div class="row clearfix">
     </div>
-    <div class="row clearfix">
+    <div class="row clearfix ">
         <form>
             <div class="form-group row">
                 <label for="inputEmail3" class="col-sm-4 col-form-label">Numéro de la facture</label>
@@ -31,7 +31,7 @@
                         <th>unitPrice</th>
                         <th>Tax (%) </th>
                         <th>totalPrice</th>
-                        <th>Action</th>
+                        <th class="doNotPrint">Action</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -52,10 +52,10 @@
                             <input [(ngModel)]="field.totalPrice" class="form-control" type="number" step="0" min="0" readonly name="{{field.totalPrice}}" />
                         </td>
                         <td>
-                            <button class="btn btn-default" type="button" (click)="deleteFieldValue(i)">Delete</button>
+                            <button class="doNotPrint btn btn-default" type="button" (click)="deleteFieldValue(i)">Delete</button>
                         </td>
                     </tr>
-                    <tr>
+                    <tr class="doNotPrint">
                         <td>
                             <input class="form-control" type="text" id="newAttributedescription" [(ngModel)]="newAttribute.description" name="newAttributedescription" />
                         </td>
@@ -79,9 +79,10 @@
             </table>
         </div>
     </div>
-    <div class="row clearfix">
+    <div class="doNotPrint row clearfix">
         <div class="col-md-12">
             <button id='res' class="pull-right btn btn-default" (click)="calculerResultat()">Calculer Résultat</button>
+            <button id='res' class="pull-right btn btn-default" (click)="printPage()">Imprimer</button>
 
         </div>
     </div>
